styles.css
html {
  font-size: 62.5%;
}
html, body {
  margin: 0;
  padding: 0;
}
body {
  font-family: 'Roboto';
  background: #222;
  text-align: center;
  color: #fff;
}
body > div {
  position: relative;
}
a {
  color: white;
}
button {
  margin-top: 20px;
  background: green;
  color: white;
  padding: 10px;
  border-radius: 10px;
  border: 0;
  cursor: pointer;
}
#instructionsLink {
  position: absolute;
  top: 20px;
  right: 20px;
  cursor: pointer;
  font-size: 1.5rem;
}
#instructions {
  padding: 20px;
  background: #555;
  padding: 10px;
  position: absolute;
  top: 0;
  left: 0;
  font-size: 1.5rem;
}
#game {
  padding-top: 20%;
  display: flex;
  margin: 0 auto;
  max-width: 900px;
}
#game div {
  flex-grow: 1;
  flex-basis: 0;
  min-width: 0;
  margin: 2px;
  display: inline;
}
#game .hint {
  font-size: 3rem;
  color: #aaa;
  position: relative;
  top: 10px;
}
input[type="text"] {
  height: 130px;
  width: 100%;
  text-align: center;
  font-size: 50px;
  text-transform: uppercase;
  border: 0;
  outline: none;
  transition: background 0.5s;
}
input[type="text"]::selection {
  background: none;
}
#results {
  display: block;
  background: #333;
  padding: 20px;
}
#results p {
  margin: 0 0 10px;
}
#stopwatch {
  font-size: 30px;
  transition: all ease 1.5s;
}
#copyright {
  font-size: 1rem;
  color: #888;
}
.hg-rows > .hg-row:first-child,
.hg-rows > .hg-row:last-child {
  display: none;
}
.simple-keyboard {
  background: #222 !important;
}
.hg-button {
  background: #000 !important;
  color: #fff !important;
}
.hg-theme-default .hg-button {
  height: 160px !important;
  font-size: 50px !important;
}
.hg-theme-default .hg-button-tab,
.hg-theme-default .hg-button-lock,
.hg-theme-default .hg-button-shift,
.hg-theme-default .hg-button-enter {
  display: none !important;
}
.simple-keyboard {
  margin-top: 60px;
}
.simple-keyboard {
  display: none;
  position: fixed;
  bottom: 0;
}
.iOS .simple-keyboard,
.Android .simple-keyboard {
  display: block;
}

